<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMSCS</string>
    <string name="senderSMS">Envíar SMS</string>
    <string name="senderGPS">Envíar Coordenadas</string>
    <string name="receiverSMS">Recibir SMS</string>
    <string name="senderMail">Envíar EMail</string>
    <string name="guardar">Guardar Configuración</string>
    <string name="salir">Cerrar</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="acerca">Desarrollado por Guillermo Morales\nGenom Corp</string>
    <string name="consultados">Contactos Consultados</string>
    <string name="correo">   EMail para envío de Correo</string>
    <string name="password">   Password de la Aplicación</string>
    <string name="background">Capturar SMS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_configuration">SMS Contact Sender</string>
    <string name="consultado">Consultados</string>
    <string name="acercade">Acerca de...</string>  
    <string name="recuerde">recuerde el formato - contacto;correoaenviar(opcional)</string> 
    <string name="saved">Registros Guardados con éxito</string>   
    <string name="contactoInfo">Información del Contacto</string>   
    <string name="contacto">Contacto </string>   
    <string name="telefono">No. Teléfono</string>   
    <string name="acceso">Acceso</string>   
    <string name="digitar">Favor digitar el password de la aplicación</string>
    <string name="wrong">Password Erroneo\nSe cierra la aplicación por seguridad</string>   
    <string name="alerta">Alerta!</string>   
    <string name="passwordAlerta">Password Erroneo!</string>   
    <string name="passwordInfo">*** Intento consultar contacto --- con password erroneo</string>   
    
</resources>